--- a/3_2/3_2.html
+++ b/3_2/3_2.html
@@ -4,39 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Золото в карманах персонажей</title>
-<style>
-    body {
-        background-color: #1e1e1e;
-        color: #ffffff;
-    }
-
-    table {
-        border-collapse: collapse;
-        width: 100%;
-    }
-
-    th, td {
-        border: 1px solid #ffffff;
-        padding: 8px;
-        text-align: left;
-    }
-
-    th {
-        background-color: #333333;
-    }
-
-    td {
-        background-color: #444444;
-    }
-
-    tr:nth-child(even) {
-        background-color: #333333;
-    }
-
-    tr:hover {
-        background-color: #555555;
-    }
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
