--- a/3_4/3_4.html
+++ b/3_4/3_4.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div class="about-section">
-        <h2>Сайт временно недоступен.<br>Приносим извинения за доставленные неудобства!</h2>
-        <img src="logo111.png" alt="LOGO">
+        <h2>О нас</h2>
+        <img src="about.png" alt="LOGO">
+        <p>Мы комания по вебразработке, готовая выполнить заказ любой сложности!</p>
     </div>
 </body>
 </html>
