--- a/4_3/index.html
+++ b/4_3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4.3</title>
-    <link rel="stylesheet" href="/4_3/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h2>Форма заказа</h2>
