--- a/3_1/3_1.html
+++ b/3_1/3_1.html
@@ -3,63 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Моя HTML-страница</title>
-    <style>
-        body {
-            background-color: #222;
-            color: #eee;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #333;
-            padding: 20px;
-        }
-        header h1 {
-            margin: 0;
-            padding: 0;
-        }
-        main {
-            padding: 20px;
-            display: flex;
-            flex-wrap: wrap;
-        }
-        section, article, nav, aside {
-            flex: 1;
-            margin: 10px;
-            padding: 20px;
-            background-color: #444;
-        }
-        h2 {
-            color: #ffcc00;
-        }
-        h3 {
-            color: #ff6600;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            margin-bottom: 5px;
-        }
-        a {
-            color: #ffcc00;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        footer {
-            background-color: #333;
-            padding: 20px;
-            text-align: center;
-        }
-        footer p {
-            margin: 0;
-            padding: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
