--- a/4_4/index.html
+++ b/4_4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4.4</title>
-    <link rel="stylesheet" href="/4_4/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h2>Регистрация нового пользователя</h2>
