--- a/4_5/index.html
+++ b/4_5/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4.5</title>
-    <link rel="stylesheet" href="/4_4/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h2>Форма для заполнения</h2>
