--- a/Module 1/4_5 Самостоятельная работа/index.html
+++ b/Module 1/4_5 Самостоятельная работа/index.html
@@ -15,11 +15,11 @@
         <label for="password">Пароль:</label>
         <input type="password" id="password" name="password" placeholder="Введите пароль" required><br>
 
-        <label>Выберите опции:</label>
+        <label>Выберите направление</label>
         <input type="checkbox" id="option1" name="option1" value="option1">
-        <label for="option1">Опция 1</label>
+        <label for="option1">Python</label>
         <input type="checkbox" id="option2" name="option2" value="option2">
-        <label for="option2">Опция 2</label><br>
+        <label for="option2">PHP</label><br>
 
         <label>Выберите пол:</label>
         <input type="radio" id="male" name="gender" value="male">
@@ -37,10 +37,6 @@
 
         <label for="birthdate">Дата рождения:</label>
         <input type="date" id="birthdate" name="birthdate"><br>
-
-        <label for="comment">Комментарий:</label>
-        <textarea id="comment" name="comment" rows="4" placeholder="Оставьте комментарий"></textarea><br>
-
         <input type="submit" value="Отправить">
     </form>
 </body>
